--- a/stupidifythis/manifest.json
+++ b/stupidifythis/manifest.json
@@ -1,11 +1,10 @@
 {
 	"name": "Stupidify This",
-	"version": "1.1",
+	"version": "1.3",
 	"description": "A tool to make sarcasm visible easily",
 	"permissions": 
 	[
 		"<all_urls>",
-		"tts",
 		"tabs",
 		"activeTab",
 		"clipboardRead",
@@ -26,7 +25,11 @@
 	"options_page": "options.html",
 
 	"minimum_chrome_version": "14",
-	"icons": { "72": "icon72.png" },
+	"icons": 
+	{
+		"32": "img/icon32.png",
+		"128": "img/icon128.png"
+	},
 	
 	"content_scripts": 
 	[{
